v2.0.0 changes to follow redux style
